public/css/sliding-scale-technologies.webflow.css
/* ... */
.uui-heading-xsmall {
  color: #101828;
  letter-spacing: 0;
  margin-top: 1.4rem;
  margin-bottom: 0;
  font-family: Inter, sans-serif;
  font-size: 1.5rem;
  font-weight: 600;
  line-height: 1.4;
}

.uui-icon-1x1-xsmall {
  width: 1.5rem;
  height: 1.5rem;
}

.uui-pricing01_top-left {
  margin-right: 1rem;
}

.uui-pricing01_component {
  grid-column-gap: 6rem;
  grid-row-gap: 4rem;
  background-color: #fff;
  border-radius: 10px;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  align-items: center;
  margin-top: 4rem;
  padding: 30px;
  font-family: Inter, sans-serif;
  display: block;
}

.uui-pricing01_content-list {
  grid-column-gap: 2rem;
  grid-row-gap: 3rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr;
}

.uui-pricing01_divider {
  background-color: #a4a4a4;
  width: 100%;
  height: 1px;
  margin-top: 2rem;
  margin-bottom: 2rem;
}

.uui-pricing01_feature-list {
  grid-column-gap: 1.5rem;
  grid-row-gap: 1rem;
  grid-template-rows: auto;
  grid-template-columns: 1fr 1fr;
  grid-auto-columns: 1fr;
  margin-top: 1rem;
  margin-bottom: 2rem;
  padding-top: .5rem;
  padding-bottom: .5rem;
  display: grid;
}

.uui-pricing01_icon-wrapper {
  flex: none;
  align-self: flex-start;
  margin-right: .75rem;
}

.uui-pricing01_feature {
  display: flex;
}

.uui-pricing01_item-text-wrapper {
  padding-top: .5rem;
  padding-bottom: .5rem;
}

.uui-pricing01_item-icon-wrapper {
  flex: none;
  align-self: flex-start;
  margin-right: 1rem;
}

.uui-pricing01_content-item {
  background-color: #ebebeb;
  border: 1px solid #ededed;
  border-radius: 15px;
  padding: 20px;
  display: flex;
  box-shadow: 0 2px 5px #0000000d;
}

.uui-section_pricing01 {
  margin-bottom: 150px;
  font-family: Inter, sans-serif;
}

.uui-badge {
  grid-column-gap: .375rem;
  background-color: var(--untitled-ui--gray100);
  color: var(--untitled-ui--gray700);
  white-space: nowrap;
  border-radius: 10rem;
  align-items: center;
  padding: .125rem .625rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: .875rem;
  font-weight: 500;
  line-height: 1.5;
  text-decoration: none;
  display: flex;
}

.uui-badge.is-primary {
  background-color: var(--untitled-ui--primary50);
  color: var(--untitled-ui--primary700);
  text-align: left;
  justify-content: flex-start;
  align-items: center;
  margin-left: 10px;
  font-family: Inter, sans-serif;
  display: flex;
}

.uui-pricing01_plan-name-wrapper {
  grid-column-gap: .5rem;
  grid-row-gap: .5rem;
  align-items: center;
  margin-bottom: .3rem;
  display: flex;
}

.uui-pricing01_content-top {
  justify-content: space-between;
  align-items: flex-start;
  display: flex;
}

.uui-pricing01_plan {
  z-index: 1;
  border: 1px solid var(--untitled-ui--gray200);
  background-image: radial-gradient(circle at 0 0, #c9aaff, #efbcff 27%, #ffcdfd 50%, #d3abe4 72%, #b862d2);
  border-radius: 1rem;
  padding: 2rem;
  position: relative;
  box-shadow: 0 12px 16px -4px #00000014, 0 4px 6px -2px #10182808;
}

.uui-icon-featured-outline-large {
  border: .5rem solid var(--untitled-ui--primary50);
  background-color: var(--untitled-ui--primary100);
  width: 3.5rem;
  height: 3.5rem;
  color: var(--untitled-ui--primary600);
  border-radius: 100%;
  justify-content: center;
  align-items: center;
  display: flex;
}

.uui-space-xsmall-2 {
  width: 100%;
  min-height: 1rem;
}

.uui-space-xxsmall-2 {
  width: 100%;
  min-height: .5rem;
}

.uui-padding-vertical-xhuge-2 {
  padding-top: 7rem;
  padding-bottom: 4rem;
}

.uui-padding-vertical-xhuge-2.sep-pricing {
  padding-top: 9rem;
  padding-bottom: 2rem;
}

.uui-heading-subheading-2 {
  color: var(--untitled-ui--primary600);
  margin-bottom: .75rem;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1rem;
  font-weight: 600;
  line-height: 1.5;
}

.uui-pricing01_top-right-text {
  color: var(--untitled-ui--gray600);
  letter-spacing: normal;
  margin-left: .125rem;
  font-size: 1.125rem;
  font-weight: 500;
}

.uui-pricing01_top-right-price {
  color: var(--untitled-ui--gray900);
  margin-top: 0;
  margin-bottom: 0;
  font-family: Inter, sans-serif;
  font-size: 3.75rem;
  font-weight: 600;
  line-height: 1.2;
}

.uui-pricing01_card-heading {
  color: var(--untitled-ui--gray900);
  letter-spacing: normal;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1rem;
  font-weight: 600;
}

.uui-text-size-medium-3 {
  color: var(--untitled-ui--gray600);
  letter-spacing: normal;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1rem;
  line-height: 1.5;
}

.uui-page-padding-3 {
  padding-left: 2rem;
  padding-right: 2rem;
}

.uui-text-size-large-3 {
  color: var(--untitled-ui--gray600);
  letter-spacing: normal;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1.125rem;
  line-height: 1.5;
}

.uui-heading-xxsmall-3 {
  color: var(--untitled-ui--gray900);
  letter-spacing: normal;
  margin-top: 0;
  margin-bottom: 0;
  font-family: system-ui, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1.25rem;
  font-weight: 600;
  line-height: 1.5;
}
/* ... */

